--- a/incident.html
+++ b/incident.html
@@ -4,30 +4,32 @@
     <title>basic example</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css/table.css">
-    <link rel="stylesheet" type="text/css" href="./node_modules/chosen-js/chosen.css">
     <script type="text/javascript" src="./javascript/tools.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" type="text/css" href="./css/side_bar_tracker.css">
+    <link rel="stylesheet" type="text/css" href="./css/side_bar.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./javascript/src/jquery.qrcode.js"></script>
     <script type="text/javascript" src="./javascript/src/qrcode.js"></script>
-    <script type="text/javascript" src="./javascript/stats.js"></script>
+    <script type="text/javascript" src="./javascript/incident.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/moment@2.22.2/moment.js"></script>
 
-    <script type="text/javascript" src="./node_modules/chosen-js/chosen.jquery.js"></script>
-    <script type="text/javascript" src="./node_modules/chosen-js/chosen.proto.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   </head>
 
   <body>
 
     <script src="javascript/menu.js"></script>
 
-    <div class="container">
+    <div id="next_to_sidebar">
 
+    <div class="data_container" style="width:60%; margin: 0px auto;">
+      <div class="dataTables_wrapper table" style="width:100%; margin: 0px auto;">
+      </div>
+    </div>
 
     </div>
 
