--- a/get_track.html
+++ b/get_track.html
@@ -20,36 +20,18 @@
     <script type="text/javascript" src="./node_modules/chosen-js/chosen.jquery.js"></script>
     <script type="text/javascript" src="./node_modules/chosen-js/chosen.proto.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
   </head>
 
   <body>
 
-    <nav class="navbar navbar-default sidebar" role="navigation">
-        <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li ><a href="./me.html">Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a></li>
-            <li class="active"><a href="./get_all_appareils.html">Appareils<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-qrcode"></span></a></li>
-            <li><a href="./projets.html">Projets<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tags"></span></a></li>
-            <li ><a href="./labo.html">Laboratoires<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-briefcase"></span></a></li>
-            <li ><a href="./groupe_list.html">Groupes<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-list"></span></a></li>
-            <li ><a href="#" onClick="logout();">Se deconnecter<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-remove"></span></a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <script src="javascript/menu.js"></script>
 
     <div class="container">
 
-        <div class='col-lg-4'>
+        <div class='col-lg-5'>
 
           <h1 id="appareil_info"></h1>
           <div id="displayQr"></div>
@@ -62,9 +44,9 @@
 
         </div>
 
-        <div class='col-lg-8'>
+        <div class='col-lg-7'>
 
-          <table class="table" id="suivie_display">
+          <table class="dataTables_wrapper" id="suivie_display">
 
           </table>
 
