--- a/groupe_appareil.html
+++ b/groupe_appareil.html
@@ -23,28 +23,7 @@
 
   <body>
 
-    <nav class="navbar navbar-default sidebar" role="navigation">
-        <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li ><a href="./me.html">Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a></li>
-            <li ><a href="./get_all_appareils.html">Appareils<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-qrcode"></span></a></li>
-            <li><a href="./projets.html">Projets<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tags"></span></a></li>
-            <li ><a href="./labo.html">Laboratoires<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-briefcase"></span></a></li>
-            <li class="active"><a href="./groupe_list.html">Groupes<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-list"></span></a></li>
-            <li ><a href="#" onClick="logout();">Se deconnecter<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-remove"></span></a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <script src="javascript/menu.js"></script>
 
     <div id="next_to_sidebar">
 
